# unichess

./: CMakeLists.txt  LICENSE
headers/: error.h  handle_arg.h  move_actions.h  sime_game.h
src/: error.c  handle_arg.c  main.c  move_actions.c  sime_game.c
